<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/image_recipe_details"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textview_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textview_name"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/image_recipe_details" 
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textview_recipe_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/diet"
            app:layout_constraintTop_toBottomOf="@id/textview_recipe_name"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textview_recipe_description_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lorem"
            app:layout_constraintTop_toBottomOf="@id/textview_recipe_source"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textview_recipe_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/categories"
            app:layout_constraintTop_toBottomOf="@id/textview_recipe_description_details"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textview_recipe_category_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/category_list"
            app:layout_constraintTop_toBottomOf="@id/textview_recipe_categories"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/main_variant2"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>