<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/mealplan_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mealplan" />

        <TextView
            android:id="@+id/textview_reminder_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/textview_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/mealplan_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_reminder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_format"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/mealplan_image"
            app:layout_constraintTop_toBottomOf="@id/textview_reminder_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>